<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"


    android:layout_height="wrap_content">




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"

        android:background="@drawable/walk"
        android:scaleType="centerCrop"
         />


    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.prathvihan1008.quickwalk.fragments.WalkFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="298dp"
                android:layout_height="298dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_shape"
                android:max="8000"
                android:progressDrawable="@drawable/circular_progress_bar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/steps_icon_description"
                        android:src="@drawable/steps" />

                    <TextView
                        android:id="@+id/steps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/_0"
                        android:textColor="@color/custom_primary"
                        android:textSize="60sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="@string/goal_icon_description"
                        android:src="@drawable/goal" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinnerStepsGoal"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginTop="16dp"
                            android:textColor="?attr/text_color"

                            android:background="@drawable/goal_custom_spinner_background"


                            android:dropDownHeight="12dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/steps_goal"
                            android:textColor="?attr/text_color"
                            android:textSize="25sp" />


                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"

            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="150dp"
                android:layout_height="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="3dp"
                        android:contentDescription="@string/distance_icon_description"
                        android:src="@drawable/distance" />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/_0_00"
                        android:textColor="?attr/text_color"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miles"
                        android:textColor="?attr/text_color"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/calories_icon_description"
                        android:src="@drawable/calories" />

                    <TextView
                        android:id="@+id/calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/_0_00"
                        android:textColor="?attr/text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cal"
                        android:textColor="?attr/text_color"
                        android:textSize="14sp" />

                </LinearLayout>


                <!-- Timer TextView -->


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="50dp">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textColor="?attr/text_color"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/tvUnittime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="?attr/text_color"
                    android:textSize="12sp" />

            </LinearLayout>



        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <!-- Horizontal LinearLayout -->
            <!-- Horizontal LinearLayout -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp">

                <ImageView
                    android:id="@+id/savebtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_save"
                    android:contentDescription="@string/stop_button_description"
                    android:focusable="true"
                    android:visibility="gone"/>

                <!-- ImageView for Pause/Resume -->
                <ImageView
                    android:id="@+id/ivPauseResume"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"

                    android:layout_weight="1"

                    android:clickable="true"
                    android:src="@drawable/resume"
                    android:contentDescription="@string/pause_resume_icon_description"
                    android:focusable="true" /> <!-- Weight is set to 1 -->

                <!-- Start Running TextView -->
                <TextView
                    android:id="@+id/notation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textColor="?attr/text_color"
                    android:textSize="30sp" /> <!-- Weight is set to 1 -->
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>








    </LinearLayout>


    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_0"
        android:textSize="180sp"
        android:visibility="invisible" />
</RelativeLayout>