<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/backgroundColorOpp"
        app:cardCornerRadius="12dp"
        android:layout_margin="5dp">

        <!-- Your existing CardView with content -->
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            app:cardCornerRadius="8dp">

            <!-- Content of improved_card_layout.xml -->
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linear3"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/walk">

                <!-- Your TextViews -->
                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="20sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textViewSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="20sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textViewDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="20sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textViewCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textSize="20sp"
                    android:textColor="?attr/text_color"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</FrameLayout>
